src-tauri/tests/snapshots/stream_bridge_events__ask_user_question_user_input_pauses_stream_with_pending_state.snap
---
source: tests/stream_bridge_events.rs
expression: snapshot
---
line_count: 3
control_events:
  - kind: userInputRequest
    message: Claude is asking for your input.
    modelId: model-id
    payload:
      kind: ask-user-question
      questions:
        - allowFreeText: true
          multiSelect: false
          question: Pick one
    permissionMode: default
    provider: claude
    resolvedModel: test-model
    sessionId: provider-session-1
    source: Claude
    userInputId: tool-1
    workingDirectory: /tmp/helmor
final_messages:
  - role: assistant
    id: msg-1
    content_length: 1
    content:
      - type: text
        text: Let me ask you a question.
    status:
      type: complete
      reason: stop
    streaming: ~
dropped_event_types: []
