src-tauri/tests/snapshots/stream_bridge_events__error_event_emits_with_internal_flag.snap
---
source: tests/stream_bridge_events.rs
expression: snapshot
---
line_count: 1
control_events:
  - internal: true
    kind: error
    message: Sidecar lost connection
    persisted: true
final_messages: []
dropped_event_types: []
